# bitwars

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile.bots  LICENSE  README.md  ROADMAP.md  SECURITY.md
.ai/: lessons.md  todo.md
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  deploy-server.yml
benchmarks/: perf-master.json  perf-ring.json
bots/: README.md  gamer_usernames.txt  tsconfig.json
bots/model/: navigation.safetensors
bots/src/: bot.ts  diagnostics.ts  main.ts  movement.ts  neural.ts  observation.ts  vehicles.ts  world.ts
client/: .env  .env.example  AUTH_SETUP.md  index.html  package-lock.json  package.json  vite.config.ts
client/public/: bitwars-server-build.json
client/public/audio/: CREDITS.md
client/src/: App.tsx  auth.ts  characterPresets.ts  db.ts  gameModes.ts  index.css  menuAudio.ts  portal.ts  serverClock.ts  shared-config.ts  store.ts  tabSession.ts  versionCheck.ts  vibeJamWidget.ts
client/src/game/: AbilityPickupManager.ts  AudioCore.ts  AudioSystem.ts  ChunkBoundaryViewer.ts  ChunkStreamer.ts  Engine.ts  FPSControls.ts  HelicopterManager.ts  LanternSystem.ts  (+30 more)
database metrics/: export-bytes_sent_to_clients-2026-03-17-11-17-44.csv  export-total_reducer_compute-2026-03-17-11-17-46.csv
docs/: LAUNCH_CHECKLIST.md  REFACTORING.md
docs/metrics/: export-billed_bytes_written-2026-03-17-11-18-07.csv  export-bytes_scanned-2026-03-17-11-17-42.csv  export-connected_clients-2026-03-17-11-17-18.csv  export-reducer_queue_length-2026-03-17-11-17-54.csv  export-rows_scanned-2026-03-17-11-17-52.csv  export-total_compute-2026-03-17-11-17-49.csv  export-tps-2026-03-17-11-17-39.csv
scripts/: run-local-macos.sh  run-local.ps1  run-local.sh
server/: spacetime.json  spacetime.local.json
server/scripts/: logs-local.sh  publish-local.sh  start-local.sh
server/spacetimedb/: Cargo.toml  build.rs
server/spacetimedb/src/: admin.rs  chat.rs  chunks.rs  cleanup.rs  constants.rs  environment.rs  grenades.rs  lib.rs  lifecycle.rs  map.rs  matchmaking.rs  player.rs  shared_config.rs  tables.rs  types.rs  worldgen.rs
server/spacetimedb/src/abilities/: mod.rs  spawning.rs
server/spacetimedb/src/combat/: blocks.rs  bunker_buster.rs  damage.rs  fire.rs  kinetic_penetrator.rs  mod.rs  projectile.rs  vehicle_destruction.rs
server/spacetimedb/src/helpers/: chat_moderation.rs  entity_ops.rs  math.rs  mod.rs  player_state.rs  terrain_cache.rs  vehicle_helpers.rs  vehicle_input.rs  vehicle_seats.rs
server/spacetimedb/src/vehicles/: anti_air.rs  apc.rs  collision.rs  fighter_jet.rs  helicopter.rs  hover.rs  interaction.rs  mod.rs  spawning.rs  weapons.rs
server/spacetimedb/src/weapons/: grenade_launcher.rs  machinegun.rs  mod.rs  rifle.rs  rpg.rs  shotgun.rs  sniper.rs  vehicle_minigun.rs  vehicle_rockets.rs
server/spacetimedb/src/worldgen/: biomes.rs  mod.rs  noise.rs  roads.rs  structural.rs
server/spacetimedb/src/worldgen/structures/: barricade.rs  megatower.rs  mod.rs  outpost.rs  tower.rs  vegetation.rs
shared/: game-constants.json
training/: .gitignore  index.html  package.json  tsconfig.json
training/scripts/: run-headless-training.sh
training/src/: App.tsx  CrashBoundary.tsx  main.tsx
training/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
training/src-tauri/src/: bridge.rs  eval.rs  lib.rs  main.rs  state.rs  training_loop.rs
training/src-tauri/src/rl/: checkpoint.rs  mod.rs  network.rs  parallel.rs  ppo.rs  replay.rs
training/src-tauri/src/sim/: abilities.rs  collision.rs  destruction.rs  environment.rs  knockback.rs  mod.rs  movement.rs  validation.rs  weapons.rs  world.rs
training/src-tauri/src/worldgen/: mod.rs
training/src-tauri/src/worldgen/structures/: airstrip.rs  building.rs  bunker.rs  city_block.rs  outpost.rs  rubble.rs  vegetation.rs
(+120 files in other folders)
