[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = { version = "2.0.3" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Dev-only: when enabled, EVERY player is treated as admin (for local/dev
# testing). OFF by default, so production builds — which never pass this
# feature — have NO in-game admin. Build a dev module with:
#   cargo build --features dev --target wasm32-unknown-unknown --release
# then publish the wasm: spacetime publish <dev-db> -b <path-to-server.wasm> ...
dev = []
