[package]
name = "bitwars-training"
version = "0.1.0"
edition = "2021"
description = "BitWars Neural Bot Training Environment"

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-shell = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rayon = "1.10"
parking_lot = "0.12"
candle-core = "0.8"
candle-nn = "0.8"
log = "0.4"
env_logger = "0.11"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.8", features = ["accelerate", "metal"] }
candle-nn = { version = "0.8", features = ["accelerate", "metal"] }
metal = "0.27"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev]
opt-level = 1

# Optimize candle and rayon even in dev builds — they're 10-50x slower without
[profile.dev.package.candle-core]
opt-level = 3
[profile.dev.package.candle-nn]
opt-level = 3
[profile.dev.package.rayon]
opt-level = 3
[profile.dev.package.rayon-core]
opt-level = 3
[profile.dev.package.half]
opt-level = 3
[profile.dev.package.gemm]
opt-level = 3
[profile.dev.package.gemm-common]
opt-level = 3
[profile.dev.package.gemm-f32]
opt-level = 3

[profile.release]
opt-level = 3
lto = true

# ── Targets ──
# The crate is a library (reused by both the GUI app and the headless trainer)
# plus two binaries. The GUI binary requires the `gui` feature (tauri/webkit);
# the headless `train` binary builds with `--no-default-features` (CPU-only, no
# tauri) so it runs on a headless training server.
[lib]
name = "bitwars_training"
path = "src/lib.rs"

[[bin]]
name = "bitwars-training"
path = "src/main.rs"
required-features = ["gui"]

[[bin]]
name = "train"
path = "src/bin/train.rs"

[features]
default = ["gui"]
# Desktop GUI app (Tauri + webkit). Off for headless training builds.
gui = ["dep:tauri", "dep:tauri-plugin-shell", "custom-protocol"]
custom-protocol = ["tauri?/custom-protocol"]
